--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BishBosh</title>
 </head>
 <body>
-    <input id="bishBoshButton" type="button" value="Bish bosh" />
+    <input id="bishBoshButton" type="button" value="Standard bish bosh" />
 
     <script src="./scripts/BishBosh.js"></script>
 </body>
